# tree-sitter-plo

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  sample.plo  setup.py  tree-sitter.json
bindings/c/: tree-sitter-plo.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_plo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPlo/: plo.h
bindings/swift/TreeSitterPloTests/: TreeSitterPloTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: call.txt  decl.txt  plo.txt
